--- a/bitnami-tomcat/blueprint.yaml
+++ b/bitnami-tomcat/blueprint.yaml
@@ -23,7 +23,7 @@ resources:
   Cloud_Machine_1:
     type: Cloud.Machine
     properties:
-      image: bitnami-tomcat
+      image: Bitnami-Tomcat-8.5.46-0
       flavor: small
       cloudConfig:
         #cloud-config
