--- a/bitnami-tomcat/blueprint.yaml
+++ b/bitnami-tomcat/blueprint.yaml
@@ -11,14 +11,14 @@ inputs:
     default: bitnami-tomcat
   user:
     type: string
-    title: Username for SSH
-    description: The username you would like to have for the installation.
+    title: SSH user
+    description: Username for this deployment.
     default: vmware
   sshkey:
     type: string
     encrypted: true
-    title: Enter SSH Key.
-    description: The SSH-Key for connectivity
+    title: SSH public key.
+    description: The public key for SSH connectivity (cat ~/.ssh/id_rsa.pub)
 resources:
   Cloud_Machine_1:
     type: Cloud.Machine
@@ -26,7 +26,6 @@ resources:
       image: bitnami-tomcat-8.5.46-0
       flavor: small
       cloudConfig:
-        #cloud-config
         hostname: '${input.hostname1}'
         users:
           - name: '${input.user}'
